some minor changes in lab 1

--- a/labs/lab1-getting-to-know-tensorflow.ipynb
+++ b/labs/lab1-getting-to-know-tensorflow.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "    return output\n",
     "\n",
-    "sample_input = tf.constant([[-1, -2]], shape=(1, 2), dtype=tf.float32)\n",
+    "sample_input = tf.constant([[-1, 2]], shape=(1, 2), dtype=tf.float32)\n",
     "\n",
     "# if you've done everything correctly, this should give you a tensor with value 0.002\n",
     "result = my_perceptron(sample_input)\n",
@@ -264,18 +264,18 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "x = tf.Variable([tf.random.normal([1])])\n",
-    "print \"Initializing x={}\".format(x.numpy())\n",
+    "print(\"Initializing x={}\".format(x.numpy()))\n",
     "learning_rate = 1e-2\n",
     "history = []\n",
     "\n",
     "for i in range(500):\n",
-    "  with tf.GradientTape() as tape:\n",
-    "    y = (x - 1)**2 # record the forward pass on the tape\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        y = (x - 1)**2 # record the forward pass on the tape\n",
     "\n",
-    "    grad = tape.gradient(y, x) # compute the gradient of y with respect to x\n",
-    "    new_x = x - learning_rate*grad # sgd update\n",
-    "    x.assign(new_x) # update the value of x\n",
-    "    history.append(x.numpy()[0])\n",
+    "        grad = tape.gradient(y, x) # compute the gradient of y with respect to x\n",
+    "        new_x = x - learning_rate*grad # sgd update\n",
+    "        x.assign(new_x) # update the value of x\n",
+    "        history.append(x.numpy()[0])\n",
     "\n",
     "plt.plot(history)\n",
     "plt.plot([0, 500],[1,1])\n",
