--- a/labs/lab1-getting-to-know-tensorflow.ipynb
+++ b/labs/lab1-getting-to-know-tensorflow.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "## 0. Importovanie TensorFlow\n",
     "\n",
-    "Na to, aby sme zadefinovať naše prvé neurónové siete, je potrebné mať nainštalovaný a načítaný softvérový rámec TensorFlow. Návod na inštaláciu nájdete v [Lab 0](https://github.com/ianmagyar/dl-course/blob/master/labs/lab0-getting-ready.md).\n",
+    "Na to, aby sme vedeli zadefinovať naše prvé neurónové siete, je potrebné mať nainštalovaný a načítaný softvérový rámec TensorFlow. Návod na inštaláciu nájdete v [Lab 0](https://github.com/ianmagyar/dl-course/blob/master/labs/lab0-getting-ready.md).\n",
     "\n",
     "Ak už máte nainštalovaný TensorFlow, neostáva Vám nič iné, ako ho načítať:"
    ]
@@ -302,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
