--- a/labs/lab3-deep-reinforcement-learning.ipynb
+++ b/labs/lab3-deep-reinforcement-learning.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "## 1.  Vytvorenie agenta\n",
     "\n",
-    "V prvom kroku riešenia si zadefinujeme nášho učiaceho sa agenta, ktorý bude využívať metódu Deep Q-learning. Kostru riešenia nájdete na [tomto odkaze](https://github.com/ianmagyar/dl-course/blob/master/labs/sources/lab3.py).\n",
+    "V prvom kroku riešenia si zadefinujeme nášho učiaceho sa agenta, ktorý bude využívať metódu Deep Q-learning. Kostru riešenia nájdete na [tomto odkaze](https://github.com/ianmagyar/dl-course/blob/master/labs/sources/lab3.py) (zdrojom kódu je [Keon's blog](https://keon.io/deep-q-learning/)).\n",
     "\n",
     "V skripte máte zadefinovanú triedu `DQNAgent` s konštruktorom, s funkciami pre uloženie a načítanie modelu, a funkciu `replay`, ktorá je zodpovedná za samotné trénovanie modelu. Prečítajte si funkcie v triede `DQNAgent`."
    ]
@@ -188,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
