added link to MIT lecture

--- a/labs/lab4-recurrent-neural-networks.ipynb
+++ b/labs/lab4-recurrent-neural-networks.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Veľmi často potrebujete natrénovať model na údaje, ktoré reprezentujú časovú postupnosť, t.j. hodnota prvku závisí od hodnoty predošlých prvkov. Na takéto údaje sú najvhodnejšie rekurentné neurónové siete (recurrent neural network). Na dnešnom cvičení použijete rekurentnú neurónku na generovanie textu.\n",
     "\n",
-    "Pred tým sa ale oboznámite s [problematikou časových postupností](http://introtodeeplearning.com/materials/2019_6S191_L2.pdf)\n",
+    "Pred tým sa ale oboznámite s [problematikou časových postupností](http://introtodeeplearning.com/materials/2019_6S191_L2.pdf). Celú prednášku nájdete [tu](https://www.youtube.com/watch?v=_h66BW-xNgk).\n",
     "\n",
     "Kostru dnešného riešenia nájdete [tu](https://github.com/ianmagyar/dl-course/blob/master/labs/sources/lab4.py). Stiahnite si aj [dataset s textmi piesní kapely Queen](https://github.com/ianmagyar/dl-course/blob/master/labs/sources/dataset_queen.txt)."
    ]
