added link to iris dataset

--- a/lectures/lecture01-tensorflow-and-keras.ipynb
+++ b/lectures/lecture01-tensorflow-and-keras.ipynb
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our first task is to load the dataset using `pandas`. For the purposes of this lab, we'll be working with the Iris dataset which you can download **here**."
+    "Our first task is to load the dataset using `pandas`. For the purposes of this lab, we'll be working with the Iris dataset which you can download [here](https://archive.ics.uci.edu/ml/datasets/Iris)."
    ]
   },
   {
