corrected typo in equation

--- a/labs/lab03-convolution-from-scratch.ipynb
+++ b/labs/lab03-convolution-from-scratch.ipynb
@@ -90,7 +90,7 @@
     "Ak platia vyššie uvedené predpoklady, rozmery výstupnej príznakovej mapy vieme vypočítať podľa vzorca:\n",
     "\n",
     "\\begin{equation*}\n",
-    "m_{d} = \\frac{I_{d} \\cdot k_{d} + 2 \\cdot P}{S} + 1,\n",
+    "m_{d} = \\frac{I_{d} - k_{d} + 2 \\cdot P}{S} + 1,\n",
     "\\end{equation*}\n",
     "\n",
     "kde $m$ je mapa, $I$ je obrázok, $k$ je filter (alebo *kernel*), $P$ je *padding* hodnota (počet pridaných núl), $S$ je *stride* a $d$ je rozmer (šírka alebo výška). Keďže ale pri konvolúcii veľmi často používame štvorcové obrazy, rovnica platí pre oba rozmery naraz.\n",
