corrected some codes in lab 10

--- a/labs/lab10-gnn.ipynb
+++ b/labs/lab10-gnn.ipynb
@@ -113,7 +113,7 @@
     "f_in, f_out = X.shape[1], 6\n",
     "W_1 = np.random.rand(f_in, f_out)\n",
     "W_2 = np.random.rand(f_in, f_out)\n",
-    "h = np.dot(X, W_1)+ np.dot(np.dot(A,X), W_2)\n",
+    "h = np.dot(X, W_1) + np.dot(np.dot(A, X), W_2)\n",
     "print(h)"
    ]
   },
@@ -208,7 +208,7 @@
     "        potential_msgs = torch.mm(X, self.W2)\n",
     "        propagated_msgs = torch.mm(A, potential_msgs)\n",
     "        root_update = torch.mm(X, self.W1)\n",
-    "        output = propagated_msgs + root_update + self.bias\n",
+    "        output = root_update + propagated_msgs + self.bias\n",
     "        return output"
    ]
   },
@@ -470,9 +470,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G1_rep = dset[1]\n",
-    "G1_single = net(G1_rep['X'], G1_rep['A'], G1_rep['batch']).detach()\n",
-    "print(G1_single)"
+    "G2_rep = dset[1]\n",
+    "G2_single = net(G2_rep['X'], G2_rep['A'], G2_rep['batch']).detach()\n",
+    "print(G2_single)"
    ]
   },
   {
@@ -482,8 +482,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G1_batch = batch_results[0][1]\n",
-    "print(G1_batch)"
+    "G2_batch = batch_results[0][1]\n",
+    "print(G2_batch)"
    ]
   },
   {
@@ -493,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.all(torch.isclose(G1_single, G1_batch))"
+    "torch.all(torch.isclose(G2_single, G2_batch))"
    ]
   },
   {
