added pip install and pandas to lab 7

--- a/labs/lab07-sequential-data-with-rnn.ipynb
+++ b/labs/lab07-sequential-data-with-rnn.ipynb
@@ -83,7 +83,7 @@
     "import sys\n",
     "\n",
     "import pandas as pd\n",
-    "# pip install pyprind\n",
+    "#!pip install pyprind\n",
     "import pyprind\n",
     "\n",
     "BASEPATH = \"lab07/aclImdb\"\n",
@@ -139,6 +139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv(\"movie_data.csv\", encoding='utf-8')\n",
     "# krok potrebny na niektorych pocitacoch\n",
     "# df = df.rename(columns={\"0\": \"review\", \"1\": \"sentiment\"})\n",
@@ -730,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
